--- a/Game_Zhajinhua.CSharp.csproj
+++ b/Game_Zhajinhua.CSharp.csproj
@@ -351,15 +351,18 @@
     <Compile Include="Assets\Scripts\GUI\LoginPanel\LoginPanel.cs" />
     <Compile Include="Assets\Scripts\GUI\MainScenePanel\BiPaiPanel.cs" />
     <Compile Include="Assets\Scripts\GUI\MainScenePanel\BiPaiPlayerHead.cs" />
+    <Compile Include="Assets\Scripts\GUI\MainScenePanel\CardItem.cs" />
+    <Compile Include="Assets\Scripts\GUI\MainScenePanel\GuizeChildPanel.cs" />
     <Compile Include="Assets\Scripts\GUI\MainScenePanel\JettonSprite.cs" />
     <Compile Include="Assets\Scripts\GUI\MainScenePanel\JiazhuPanel.cs" />
     <Compile Include="Assets\Scripts\GUI\MainScenePanel\MainScenePanel.cs" />
+    <Compile Include="Assets\Scripts\GUI\MainScenePanel\MySelfHead.cs" />
+    <Compile Include="Assets\Scripts\GUI\MainScenePanel\PlayerData.cs" />
+    <Compile Include="Assets\Scripts\GUI\MainScenePanel\PlayerHead.cs" />
+    <Compile Include="Assets\Scripts\GUI\MainScenePanel\ResultChildPanel.cs" />
+    <Compile Include="Assets\Scripts\GUI\MainScenePanel\ResultPlayerItemView.cs" />
     <Compile Include="Assets\Scripts\GUI\MainScenePanel\ViewChild.cs" />
     <Compile Include="Assets\Scripts\GUI\ResCheckPanel\ResCheckPanel.cs" />
-    <Compile Include="Assets\Scripts\GameLogic\CardItem.cs" />
-    <Compile Include="Assets\Scripts\GameLogic\MySelfHead.cs" />
-    <Compile Include="Assets\Scripts\GameLogic\PlayerData.cs" />
-    <Compile Include="Assets\Scripts\GameLogic\PlayerHead.cs" />
     <Compile Include="Assets\Scripts\GameStateManager\GameState\BattleState.cs" />
     <Compile Include="Assets\Scripts\GameStateManager\GameState\CityState.cs" />
     <Compile Include="Assets\Scripts\GameStateManager\GameState\FieldState.cs" />
